Fix lectures table is unreadable on mobile
Allow overflow with scroll, increase minimum width

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -62,7 +62,8 @@ p, ul{
 
 #content{
     margin-top:50px;
-	min-height: 200px;
+    min-height: 200px;
+    overflow-x: scroll;
 }
 
 #header{
@@ -184,6 +185,7 @@ p, ul{
     padding-top:10px;
     padding-bottom:10px;
     border-bottom: 1px solid @gray-light;
+    min-width: 620px;
     .week_id{
         .make-xs-column(1);
     }
